--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </div>
 
       <div class="weather">
-        <img src="images/clouds.png" class="weathericon" alt="Weather Icon" />
+        <img src="clouds.png" class="weathericon" alt="Weather Icon" />
         <h1 class="temp">32°C</h1>
         <h2 class="city">Islamabad</h2>
 
